cmake_minimum_required(VERSION 3.15)
project(_)

set(CMAKE_CXX_STANDARD 11)

add_executable(_ main.cpp Q283_Move_Zeros.h Q26_Remove_Duplicates_from_Sorted_Array.h Q27_Remove_Element.h Q80_Remove_Duplicates_from_Sorted_Array_II.h Q11_Container_With_Most_Water.h Q125_Valid_Palindrome.h Q344_Reverse_String.h Q345_Reverse_Vowels_of_a_String.h Q167_Two_Sum_II-Input_array_is_sorted.h Q75_Sort_Colors.h Q3_Longest_Substring_Without_Repeating_Characters.h Q209_Minimum_Size_Subarray_Sum.h Q438_Find_All_Anagrams_in_a_String.h Q15_3Sum.h Q16_3Sum_Closest.h Q18_4Sum.h)