cmake_minimum_required(VERSION 3.15)
project(Chapter4_)

set(CMAKE_CXX_STANDARD 11)

add_executable(Chapter4_ main.cpp Q454_4Sum_II.h Q242_Valid_Anagram.h Q202_Happy_Number.h Q290_Word_Pattern.h Q205_Isomorphic_Strings.h Q451_Sort_Characters_By_Frequency.h Q217_Contains_Duplicate.h Q219_Contains_Duplicate_II.h Q349_Intersection_of_Two_Arrays.h "Q350_Intersection_of_Two_Arrays_II .h")