cmake_minimum_required(VERSION 3.15)
project(Chapter7_)

set(CMAKE_CXX_STANDARD 11)

add_executable(Chapter7_ main.cpp Q104_Maximum_Depth_of_Binary_Tree.h Q111_Minimum_Depth_of_Binary_Tree.h Q226_Invert_Binary_Tree.h Q100_Same_Tree.h Q101_Symmetric_Tree.h Q222_Count_Complete_Tree_Nodes.h Q110_Balanced_Binary_Tree.h Q404_Sum_of_Left_Leaves.h Q112_Path_Sum.h Q257_Binary_Tree_Paths.h "Q113_Path_Sum_II.h" Q129_Sum_Root_to_Leaf_Numbers.h Q437_Path_Sum_III.h)