cmake_minimum_required(VERSION 3.15)
project(Chapter9_)

set(CMAKE_CXX_STANDARD 11)

add_executable(Chapter9_ main.cpp Q198_House_Robber.h Q70_Climbing_Stairs.h Q120_Triangle.h Q64_Minimum_Path_Sum.h Q279_Perfect_Squares.h Q91_Decode_Ways.h Q62_Unique_Paths.h Q63_Unique_Paths_II.h Q213_House_Robber_II.h Q416_Partition_Equal_Subset_Sum.h Q322_Coin_Change.h Q477_Total_Hamming_Distance.h Q139_Word_Break.h)